--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^11.13.5",
     "heroicons": "^2.1.5",
     "next": "15.0.2",
     "react": "19.0.0-rc-02c0e824-20241028",
