--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-countup": "^6.5.3",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-icons": "^5.3.0",
-    "react-intersection-observer": "^9.13.1"
+    "react-intersection-observer": "^9.13.1",
+    "swiper": "^11.2.1"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
