--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-countup": "^6.5.3",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-hot-toast": "^2.5.1",
     "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "swiper": "^11.2.1"
