--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
             git pull origin main
             npm install --legacy-peer-deps
             npm run build
-            pm2 restart nextjs-app
+            pm2 restart nextjs-azhari-travels
