--- a/package.json
+++ b/package.json
@@ -9,25 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.13.5",
-    "heroicons": "^2.1.5",
-    "next": "15.0.2",
-    "react": "19.0.0-rc-02c0e824-20241028",
+    "framer-motion": "^12.27.1",
+    "heroicons": "^2.2.0",
+    "next": "16.1.3",
+    "react": "19.2.3",
     "react-countup": "^6.5.3",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "react-hot-toast": "^2.5.1",
-    "react-icons": "^5.3.0",
-    "react-intersection-observer": "^9.13.1",
-    "swiper": "^11.2.1"
+    "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^10.0.2",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
-    "@iconify/react": "^5.2.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@iconify/react": "^6.0.2",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^25.0.9",
+    "@types/react": "^19.2.8",
+    "@types/react-dom": "^19.2.3",
     "@types/tailwindcss": "^3.1.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "autoprefixer": "^10.4.23",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
+    "typescript": "^5.9.3"
   }
 }
